@@ -87,12 +87,12 @@ def test_start_res():
 def test_after_start():
     res = do_request(after_start_response_app, 200)
     res = strip_html(str(res))
-    print res
+    #print res
     assert 'ValueError: error2' in res
     assert ':53' in res
 
 def test_iter_app():
-    res = do_request(iter_app, 200)
+    res = do_request(lint.middleware(iter_app), 200)
     #print res
     assert 'None raises error' in res
     assert 'yielder' in res
